--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ header
     width: 100%;
     background-color: rgb(69, 81, 81);
 }
+body
+{
+    background-color: #000;
+    color: #fff;
+}
 
 .logo
 {
@@ -19,23 +24,17 @@ nav
     text-align: center;
     font-size: 1.4em;
 }
-body
-{
-    background-color: #000;
-    color: #fff;
-}
 
-h1
+h1,h2
 {
     text-align: center;
+    padding-top: 2%;
 }
 
-h2
-{
-    text-align: center;
+p{
+    padding-top: 1.5%;
+    padding-bottom: 0.5%;
 }
-
-
 .darkroom__vermelho
 {
     color: red;
@@ -63,4 +62,5 @@ footer
 .biografia__imagem
 {
     text-align: center;
+    background-color: #000;
 }
