--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 header
 {
     width: 100%;
-    background-color: rgb(69, 81, 81);
+    background-color: #000;
+    
 }
 body
 {
     background-color: #000;
     color: #fff;
+    background-image: url(../img/espaço.jpg);
+    background-attachment: fixed;
+    font-family: 'Roboto Mono', monospace;;
 }
 
 .logo
@@ -29,27 +33,42 @@ h1,h2
 {
     text-align: center;
     padding-top: 2%;
+    padding-bottom: 2%;
 }
 
-p{
-    padding-top: 1.5%;
-    padding-bottom: 0.5%;
+p
+{
+    line-height: 1.5em;;
+    
 }
 .darkroom__vermelho
 {
     color: red;
 }
 
+figure
+{
+    text-align: center;
+}
+
 .banner
 {
-    width: 100%;
+    width: 90%;
 }
 
 .container
 {
-    background-color: rgb(69, 81, 81);
+    background-color: #000;
     width: 80%;
     margin: auto;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+.topicos
+{
+    line-height: 2em;
+    padding-top: 2%;
 }
 
 footer
