--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ nav
     text-decoration: none;
 }
 
+
 body
 {
     background-color: #000;
@@ -58,6 +59,7 @@ nav
     font-size: 1.7em;
 }
 
+
 h1
 {
     text-align: center;
@@ -72,6 +74,12 @@ h2
     padding-top:2%;
     padding-bottom: 2%;
     font-size: 1.5em;
+    text-shadow: 2px 2px grey;
+}
+
+h3
+{
+    padding-bottom: 15%
 }
 
 p
@@ -102,6 +110,12 @@ figure
 {
     text-align: center;
 }
+.pirataria
+{
+    border-style: double;
+    background-image: linear-gradient(to right, black, grey);
+    width: 90%;
+}
 
 .container
 {
@@ -127,9 +141,8 @@ figure
 .imagem_interrogacao
 {
     float: left;
-    padding-right: 2%;
-    padding-top: 2%;
     width: 20%;
+    box-shadow: 10px 10px 5px grey;
 }
 
 .topicos_1,.topicos_2
@@ -186,3 +199,10 @@ footer
     padding-bottom: 2%;
 }
 
+@media(max-width:800px)
+{
+    .linha
+    {
+        flex-direction:  column;
+    }
+}
