--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,7 @@ footer
 {
     color: 1.3em;
     text-align: center;
+    padding-top: 2%;
 }
 
 .biografia__imagem
@@ -197,6 +198,23 @@ footer
     width: 33.33%;
     padding-top: 2%;
     padding-bottom: 2%;
+}
+
+table, td, th
+{
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+th
+{
+    color:grey
+}
+
+table
+{
+    border-collapse: collapse;
+    width: 100%;
 }
 
 @media(max-width:800px)
