--- a/css/style.css
+++ b/css/style.css
@@ -154,13 +154,13 @@ figure
 }
 .capas__filmes
 {
-    width: auto;
+    width: 20em;
     height: 30em;
 }
 
 .capas__jogos
 {
-    width: auto;
+    width: 20em;
     height: 30em;
 }
 
