--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,14 @@ html
 
 header
 {
-    width: 100%;
+    top:0;
+    left: 0;
+    right: 0;
     background-color: #000;
+    position: fixed;
+    z-index:1;
 }
+
 
 nav
 {
@@ -17,8 +22,10 @@ nav
 }
 
 
+
 body
 {
+    margin-top: 15%;
     background-color: #000;
     color: #fff;
     background-attachment: fixed;
@@ -28,13 +35,15 @@ body
 .logo
 {
     color: #fff;
-    text-align: center;
+    top: 1%;
+    right:1%;
     font-size: 1.4em;
+    text-align: center;
 }
 
 .logo_foto
 {
-    width: 20%;
+    width: 10%;
 }
 
 nav
@@ -46,12 +55,19 @@ nav
 
 .menu
 {
-    padding-bottom: 2%;
+    padding-bottom:1.5%;
+    gap: 2%;
+}
+
+.menu li{
+    display: inline;
 }
 
 .link__menu
 {
     text-decoration: none;
+    background-color: rgb(58, 57, 57);
+    padding:0.5em;
     color: #fff;
     line-height: 1.5em;
     font-size: 0.5em;
@@ -60,8 +76,8 @@ nav
 .link__menu:hover
 {
     transition: 1s;
-    color: red;
-    font-size: 1em;
+    font-size: 0.7em;
+    background-color: #bab8b8;
 }
 
 
@@ -229,11 +245,27 @@ table
     
 }
 
-@media(max-width:800px)
+.tabela_container
 {
-    .linha
-    {
+    background-color: #fff;
+    margin-left: 10%;
+    margin-right:10%;
+}
+
+.preto{
+    color: #000;
+}
+
+@media(max-width:800px){
+    .linha{
         flex-direction:  column;
     }
 }
 
+@media(max-width:600px){
+    .menu{
+        display: flex;
+        flex-direction: column;
+        gap: 2%;
+    }
+}
