--- a/css/style.css
+++ b/css/style.css
@@ -250,10 +250,28 @@ table
     background-color: #fff;
     margin-left: 10%;
     margin-right:10%;
+    padding: 2%;
+    border-radius: 2em;
+    text-align: center;
 }
+
+input[type=text], select, textarea {
+    width: 60%;
+    border-radius: 0.5em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    background-color:rgb(58, 57, 57);
+}
+
+input[type=text], select, textarea ,::placeholder{
+    color: white;
+}
+
 
 .preto{
     color: #000;
+    padding-top: 2%;
+    padding-bottom: 1%;
 }
 
 @media(max-width:800px){
